bk_ida/gccida/c2/emit_library_call_value_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3905:1: error: must use 'enum' tag to refer to type 'libcall_type'
libcall_type fn_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3906:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3901:6: error: conflicting types for 'emit_library_call_value_1'
rtx  emit_library_call_value_1( 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:213:12: note: previous declaration is here
static rtx emit_library_call_value_1            PARAMS ((int, rtx, rtx,
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3913:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3915:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3918:27: error: expected expression
emit_library_call_value_1::arg *v17; // r13 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3919:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3920:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3920:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3926:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3926:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3927:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v26; // rcx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3928:6: error: use of undeclared identifier 'overflow_arg_area'
rtx *overflow_arg_area; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3929:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3930:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3930:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3947:27: error: expected expression
emit_library_call_value_1::arg *v46; // rcx 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3947:1: error: redefinition of label 'emit_library_call_value_1'
emit_library_call_value_1::arg *v46; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3918:1: note: previous definition is here
emit_library_call_value_1::arg *v17; // r13 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/calls.c:3951:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // esi 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_library_call_value_1/src/obj/calls.o] Error 1
